# llzk-interpreter

./: Cargo.toml  Makefile  README.md
scripts/: build-macos.sh
src/: dispatch.rs  eval.rs  lib.rs  main.rs  state.rs  value.rs
tests/: interpreter_tests.rs
