[package]
name = "llzk_interpreter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llzk-interpreter"
path = "src/main.rs"

[dependencies]
llzk = { git = "https://github.com/Veridise/llzk-rs", features = ["bigint"], rev ="5e14101" }
llzk-sys = { git = "https://github.com/Veridise/llzk-rs", rev ="5e14101" }
melior = "0.25.1"
num-bigint = "0.4"
num-traits = "0.2"
